--- a/pages/about.html
+++ b/pages/about.html
@@ -420,7 +420,7 @@
             "https://deborahjbalthazar.files.wordpress.com/2019/05/cropped-28deborahbalthazar-03-4.jpg?w=190"></a>
           </div>
           <p class="site-title"><a href=
-          "index.html" rel=
+          "../index.html" rel=
           "home">Deborah J. Balthazar</a></p>
           <p class="site-description">Freelance Reporter & Science
           Writer</p>
