--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -404,7 +404,7 @@
             "https://deborahjbalthazar.files.wordpress.com/2019/05/cropped-28deborahbalthazar-03-4.jpg?w=190"></a>
           </div>
           <p class="site-title"><a href=
-          "index.html" rel=
+          "../index.html" rel=
           "home">Deborah J. Balthazar</a></p>
           <p class="site-description">Freelance Reporter & Science
           Writer</p>
@@ -415,22 +415,22 @@
                 <li id="menu-item-18" class=
                 "menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-18">
                   <a href=
-                  "index.html">Home</a>
+                  "../index.html">Home</a>
                 </li>
                 <li id="menu-item-15" class=
                 "menu-item menu-item-type-post_type menu-item-object-page menu-item-15">
                   <a href=
-                  "/about.html">About</a>
+                  "about.html">About</a>
                 </li>
                 <li id="menu-item-21" class=
                 "menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-21">
-                  <a href="/portfolio.html" aria-current=
+                  <a href="portfolio.html" aria-current=
                   "page">Portfolio</a>
                 </li>
                 <li id="menu-item-16" class=
                 "menu-item menu-item-type-post_type menu-item-object-page menu-item-16">
                   <a href=
-                  "/contact.html">
+                  "contact.html">
                   Contact</a>
                 </li>
               </ul>
