--- a/pages/about.html
+++ b/pages/about.html
@@ -436,17 +436,17 @@
                 <li id="menu-item-15" class=
                 "menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-2 current_page_item menu-item-15">
                   <a href=
-                  "about.html"
+                  "./about.html"
                   aria-current="page">About</a>
                 </li>
                 <li id="menu-item-21" class=
                 "menu-item menu-item-type-custom menu-item-object-custom menu-item-21">
-                  <a href="portfolio.html">Portfolio</a>
+                  <a href="./portfolio.html">Portfolio</a>
                 </li>
                 <li id="menu-item-16" class=
                 "menu-item menu-item-type-post_type menu-item-object-page menu-item-16">
                   <a href=
-                  "contact.html">
+                  "./contact.html">
                   Contact</a>
                 </li>
               </ul>
